  - 방문자 스스로 예약확인 할 수 있는 화면을 추가 (#148)

v0.9.4    Tue, 14 Mar 2017 12:58:40 +0900
  - jquery.timeago 형식을 UTC 에서 localtime 으로 변경

v0.9.3    Tue, 21 Feb 2017 18:06:07 +0900
  - 최근대여의류에 태그를 표시 (#144)

v0.9.2    Thu, 02 Feb 2017 11:09:56 +0900
  - 온라인 주문서에 booking date 가 없어서 발생하는 오류 해결 (#146)

v0.9.1    Mon, 09 Jan 2017 17:38:15 +0900
  - SMS 발신번호 변경
  - 추천의류에 태그를 표시 (#141)

v0.9.0    Fri, 25 Nov 2016 08:03:44 +0900
  - 온라인주문서 구분을 위해 online 컬럼을 사용

v0.8.11   Tue, 22 Nov 2016 17:22:32 +0900
  - 의류준비에 사용자정보 바로가기 링크 추가 (#129)

v0.8.10   Thu, 17 Nov 2016 15:10:55 +0900
  - 대시 보드 화면에서 500 오류 코드 발생 (#135)
  - /online 에 열린사진관 sms 매크로를 추가 (#137)
  - 여성의 목 둘레 대신에 허벅지 둘레를 표시 (#134)

v0.8.9    Mon, 29 Aug 2016 14:45:55 +0900
  - /target_date 를 인증없이 처리
  - 의류준비탭의 탈의실화면에 대여목적을 표시 (#128)

v0.8.8    Thu, 07 Jul 2016 18:57:51 +0900
  - 검색결과 정렬방식 개선 (#125)

v0.8.7    Thu, 07 Jul 2016 14:59:28 +0900
  - 의류준비 -> 의류준비중

v0.8.6    Mon, 04 Jul 2016 18:57:11 +0900
  - 빈 탈의실에 대해 상태 toggle (#112)

v0.8.5    Mon, 04 Jul 2016 14:20:09 +0900
  - 추천의류 스커트의 사이즈 표시변경 (#124)

v0.8.4    Fri, 24 Jun 2016 10:38:40 +0900
  - 의류검색 데몬의 표준출력 문제해결 (#94)

v0.8.3    Mon, 20 Jun 2016 18:31:31 +0900
  - 매번 의류검색하기전 인증절차 수행 (#118)
  - 온라인 SMS 매크로 내용 수정 (#123)
  - 비예약자의 예약시간을 잘보이게함 (#110)

v0.8.2    Thu, 16 Jun 2016 15:43:03 +0900
  - 지난의류의 스커트는 허리둘레도 표시

v0.8.1    Thu, 16 Jun 2016 14:07:05 +0900
  - 수선완료 목록의 삭제 상태변경 (#122)
  - 추천의류를 10개까지 보여줌

v0.8.0    Tue, 14 Jun 2016 18:33:15 +0900
  - preparation 리팩토링 (#94)
  - 제안의류(의류추천) 기능 추가 (#94)
  - redis 의 on/off 저장방식 대신에 직접 command(hset, hget..)를 사용

v0.7.0    Fri, 20 May 2016 18:53:16 +0900
  - rename OpenCloset::Status OpenCloset::Monitor::Status
  - 토글 가능한 대여의류품목 (#109)

v0.6.8    Fri, 25 Mar 2016 18:25:27 +0900
  - 의류준비에서 여성의 경우 스커트둘레 대신 허리를 표시 (#106)

v0.6.7    Thu, 03 Mar 2016 15:56:19 +0900
  - 온라인 현황에 사용자의 신체치수를 나타냄 (#97)
  - 의류준비에서 온라인대여자는 나타내지 않음
  - 최소 바지길이 변경 90 -> 80 (#95)
  - 의류기록에서의 bestfit 을 강조 (#90)
  - 수선목록과 포장목록에 제목표시 (#96)
