@@ -4,9 +4,11 @@ requires 'Directory::Queue';
 requires 'Encode';
 requires 'HTTP::CookieJar';
 requires 'HTTP::Tiny';
+requires 'Minion::Backend::SQLite';
 requires 'Mojo::JSON';
 requires 'Mojo::Redis2', '0.17';
 requires 'Mojolicious::Plugin::HamlRenderer';
+requires 'Mojolicious::Plugin::Minion';
 requires 'Mojolicious::Plugin::RemoteAddr';
 requires 'Mojolicious::Plugin::Validator';
 requires 'Net::IP::AddrRanges';
